# logs-anomaly-detection

./: pyproject.toml
logs/: constant.py  logs_generator.py  preprocessing.py  training.py
models/: isolation_forest.joblib  one_class_svm.joblib
src/: logs_simulator.py  main.py
